<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/side_nav_home"
            android:title="@string/home"
            android:checked="true"
            android:icon="@drawable/ic_baseline_home_24" />
        <item
            android:id="@+id/side_nav_profile"
            android:title="@string/profile"
            android:visible="false"
            android:icon="@drawable/ic_baseline_person_24"/>
        <item
            android:id="@+id/side_nav_orders"
            android:title="@string/orders"
            android:visible="false"
            android:icon="@drawable/ic_baseline_list_24"/>
        <item
            android:id="@+id/side_nav_wishlist"
            android:title="@string/wishlist"
            android:visible="false"
            android:icon="@drawable/ic_baseline_favorite_24"/>
        <item
            android:id="@+id/side_nav_message"
            android:title="@string/messages"
            android:visible="false"
            android:icon="@drawable/ic_baseline_message_24"/>
    </group>

    <group android:id="@+id/group_auth">
        <item
            android:id="@+id/side_nav_signin"
            android:title="@string/signin"
            android:icon="@drawable/ic_baseline_login_24"/>
        <item
            android:id="@+id/side_nav_signout"
            android:title="@string/signout"
            android:visible="false"
            android:icon="@drawable/ic_baseline_logout_24"/>
    </group>

</menu>