<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.NDCamera.FullScreen"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/signin_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ndcamera_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/signin_title"
        android:textColor="@color/red"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Email"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:background="@drawable/custom_input_search"
        android:hint="user@example.com"
        android:textColor="@color/gray"
        android:textSize="12sp"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:background="@drawable/custom_input_search"
        android:hint="........"
        android:textColor="@color/gray"
        android:textSize="12sp"/>
    
    <TextView
        android:id="@+id/signin_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"
        android:text="@string/forget_password"
        android:textColor="@color/light_blue"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/signin_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="Sign In"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="or, sign in with"
        android:textColor="@color/gray"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/signin_google_signin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/google_sign_in_logo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or, create a new account ? "
            android:textColor="@color/gray"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/signin_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_signup"
            android:textColor="@color/light_blue"
            android:textSize="12sp"/>

    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/signin_signup"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Sign Up"-->
<!--        android:textAllCaps="false"/>-->

</LinearLayout>